# Rag

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  docker-compose.yml  pyproject.toml
adr/: 0001-dense-embedding-model.md  0002-package-and-env-management-uv.md  0003-chunking-strategy.md  0004-sparse-retrieval-and-fusion.md  0005-deterministic-point-ids-and-idempotency.md  0006-generation-backend-and-generator-abstraction.md  0007-refusal-threshold-and-confidence-signal.md  0008-agentic-routing-with-langgraph.md  0009-evaluation-harness.md  README.md
docs/: agent-graph.md  agent-layer.md  evaluation.md  ingestion.md  onboarding-notes.md  query-pipeline.md
eval/: golden_set.jsonl  report.json  report.md
src/research_navigator/: __init__.py  config.py  logging.py
src/research_navigator/agents/: __init__.py  graph.py  nodes.py  router.py  state.py  tools.py
src/research_navigator/cli/: __init__.py  agent.py  eval.py  ingest.py  query.py
src/research_navigator/eval/: __init__.py  golden_set.py  judge.py  metrics.py  report.py  retrievers.py  runner.py
src/research_navigator/generate/: __init__.py  citations.py  generator.py  pipeline.py  prompt.py
src/research_navigator/ingest/: __init__.py  __main__.py  chunk.py  embed.py  manifest.py  parse.py  pipeline.py  qdrant_store.py
src/research_navigator/retrieve/: __init__.py  filters.py  hybrid.py  query.py
tests/: conftest.py  test_agent_graph.py  test_agent_router.py  test_agent_tools.py  test_chunk.py  test_citations.py  test_cli.py  test_embed.py  test_eval_golden_set.py  test_eval_metrics.py  test_eval_runner.py  test_filters.py  test_generator.py  test_manifest.py  test_parse.py  test_pipeline_integration.py  test_qdrant_store.py  test_query_pipeline.py  test_query_understanding.py  test_smoke.py
